# xLSTM-metal

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CREDITS.md  LICENSE  NOTICE  README.md  check_safetensors_dtype.py  diagnostic_weights.py  generate.py  pyproject.toml  run_pytest.py  test_auto_wiring.py  test_block_components.py  test_canonical_vs_mad.py  test_chunkwise_kernel.py  test_config_driven_inference.py  test_debug_generation.py  test_function_parity.py  test_generate_method.py  test_generation_loop.py  test_gpu_capture.py  test_greedy_inference.py  test_inference_real.py  test_kernel_math.py  test_layer_by_layer.py  test_logits_debug.py  test_mad_generation.py  test_memory_tracking.py  test_minimal_debug.py  test_mlstm_breakdown.py  test_mlx_vs_pytorch.py  test_multi_token_prompt.py  test_multiple_prompts.py  test_numerical_parity.py  test_numpy_teacher.py  test_pretrained_inference.py  test_progressive_length.py  test_real_inference.py  (+10 more)
.github/: pull_request_template.md
.github/workflows/: policy.yml
docs/: ARCHITECTURE.md  COMPLETE_FIX_SUMMARY.md  COMPONENTS.md  DOCSTRING_ENRICHMENT_SUMMARY.md  FIX_DTYPE_ISSUE.md  FIX_RMSNORM_METAL_KERNEL.md  HRM_MAD_INTEGRATION.md  MAD_COMPOSITION_PROPOSAL.md  MAD_MLSTM_ARCHITECTURE.md  NCPS_WIRING.md  NUMERICAL_STABILITY.md  NUMERIC_STABILITY_TORCH_vs_MLX.md  PYTORCH_MLX_CONV1D_DIFFERENCES.md  README.md  XLSTM_7B_ARCHITECTURE_MAP.md  XLSTM_7B_COMPLETE_ARCHITECTURE.md  XLSTM_ARCHITECTURE_SEQUENCES.md  XLSTM_EXPONENTIAL_GATING_PARALLELISM.md  XLSTM_MLX_ARCHITECTURE.md
docs/architecture/: BLOCK_EXECUTION_CLARIFICATION.md  CELL_BLOCK_ARCHITECTURE.md  COMPONENT_ARCHITECTURE_ANALYSIS.md  KERNEL_LAB_AND_TTT_INTEGRATION.md  LFM2_AND_XLSTM_WIRING_ANALYSIS.md  M2BERT_ARCHITECTURE_ANALYSIS.md  MAD_PARALLELISM_ANALYSIS.md  MLSTM_NUMERICAL_STABILITY_ANALYSIS.md  TTT_KERNEL_MAPPING.md  TTT_SWAR_KERNEL_SYNTHESIS.md  XLSTM_MAD_NCPS_DESIGN.md
docs/flowlang/: FLOWLANG.md  FLOWLANG_SPEC.md  README.md
docs/plan/: EXTENDED_CONTEXT_PLAN.md  HOGWILD_ANALYSIS.md  MEGATRON_MODEL_PARALLELISM_ANALYSIS.md  RESEARCH_NOTES.md  REVERSIBLE_RNN_NOTES.md  STATE_EXPANSION_PRECISION.md
docs/porting/: CANONICAL_XLSTM_IMPLEMENTATION_NOTES.md
docs_archive/: README.md  REORGANIZATION_PLAN.md  STRUCTURE.txt  reorg_plan.txt
docs_archive/debugging/: COMPLETE_FIX_SUMMARY.md
docs_archive/lessons_learned/: MLX_NUMERICS_LAB.md
docs_archive/porting/: M2BERT_ARCHITECTURE_ANALYSIS.md
docs_archive/project_management/: CONFIG_DRIVEN_ARCHITECTURE_VERIFIED.md  HYPERPROFILE_PYTORCH_MLX_ANALYSIS.md
docs_archive/research/: MEGATRON_MODEL_PARALLELISM_ANALYSIS.md  REVERSIBLE_RNN_NOTES.md  xLSTM_vs_LFM2_Comparison.md
examples/: hrm_blocks_demo.py  hrm_training_demo.py  hrm_xlstm_demo.py
experimental_kernels/: README.md
experimental_kernels/2025-09-10-mlx-research/: mx_streams_overlap_demo.py
experimental_kernels/mlx_fast_kernels/: gemm_kernels.py  qr_kernels.py
kernel_development/: README.md  wwdc_checklist.md
kernel_development/docs/: MLX_IMPLEMENTATION_GUIDE.md  MLX_MHLN_Kernel_Report.md  kernel_guide.md
kernel_development/ivf_topk_l2/: __init__.py
kernel_development/liquid_cfc_slstm/: neuromorphic_kernel.metal
kernel_development/m2bert_metal_kernels/: README.md  activations_mlx.py  metal_fft_conv_streamed.py  metal_kernels.py
kernel_development/metal_bitexact/: README.md
kernel_development/optimizations/: judge_outputs.py  judge_with_ollama.py  mlx_tuning.py  optimize_mps.py  plot_opt_results.py  run_mps_probe.py  save_outputs_for_trials.py  test_metal_io.py  test_metal_kernels.py  test_metal_parity.py  test_slstm_parity.py  validate_xlstm_layout.py  xltop.py
kernel_development/pytorch_metal_kernel_demo/: pytorch_metal_kernels_demo.py
kernel_development/pytorch_mm/: README.md  setup.py
kernel_development/streams_demo/: mx_streams_overlap_demo.py
kernel_development/xlstm/: slstm_metal_kernel_notes.md
lab/: dendritic_comb_probe.py
lab/runs/: mlx_decode_stats.csv  stepstats_async.csv  varquant_stats.csv
mad/: __init__.py
mad/inference/: __init__.py  text_generator.py  xlstm_7b_runner.py
mad/models/: xlstm_7b_mlx.py
mad/utils/: safetensors_loader.py  weight_loader.py
mad/wiring/: __init__.py  core.py
prompts/: README.md
scripts/: README.md  convert_xlstm_7b_weights.py
scripts/benchmarks/: README.md  bench_mps.py  benchmark.py  run_mlx_benchmarks.py  xlstm_ultimate_benchmark.py
scripts/debug/: README.md
scripts/downloads/: README.md  convert_hf_to_mlx.py  download_model.py  download_model_resume.py
tests/: __init__.py  conftest.py  diagnostic_test.py  diagnostic_weights.py  test_config_driven_inference.py  test_metal_kernels.py  test_mlx_torch_numerical_parity.py  test_pretrained_inference.py  test_simple_loading.py  test_slstm_metal_kernel.py  test_wired_model.py  test_wiring.py
tests/parity/: canonical_reference.py  test_norm_override.py  test_parity_simple.py
tools/: embercoach.py  emberlint.py  emberlint_strict.py  run_emberlint.py
xlstm-solace-torch/: benchmark (1).py  train (1).py
xlstm-solace-torch/mad/: analysis (1).py  configs (1).py  paths (1).py  registry (1).py
xlstm-solace-torch/tests/: test_canonical_parity (1).py  test_chunkwise_parity (1).py  test_mad_xlstm_blocks (1).py
xlstm_metal/: __init__.py  demo_wiring.py  test_wiring.py  test_xlstm_7b_mad.py  test_xlstm_ncps_wiring.py
xlstm_metal/bridges/: __init__.py
xlstm_metal/inference/: __init__.py  generate.py  text_generator.py  xlstm_7b_runner.py
xlstm_metal/load_model/: weight_loader.py
xlstm_metal/mlx_jit/: __init__.py  (+2 more)
(+592 files in other folders)
